[package]
name = "beeg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap_complete = "4.5"
comfy-table = "7"
dirs = "5"
ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"
hex = "0.4"
shell-escape = "0.1"
regex = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
